--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -36,7 +36,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Image Section with status chip overlay -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -147,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="Contact to claim"
+                    android:text="Contact"
                     android:textColor="@color/slate_900"
                     android:textSize="18sp"
                     android:textStyle="bold" />
