--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -103,8 +103,9 @@
                 android:layout_marginTop="4dp"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="@color/gray_700"
+                android:maxLines="3"
+                android:ellipsize="end"
                 tools:text="Blue spiral notebook with a sticker of a cat on the front cover. It contains all my physics notes." />
-
         </LinearLayout>
 
         <!-- Post Image -->
