--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -68,7 +68,7 @@
 
         <argument
             android:name="postId"
-            app:argType="integer" />
+            app:argType="string" />
     </fragment>
 
 </navigation>
