--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F4F6"
+    android:background="@color/slate_100"
     tools:context=".ui.fragments.HomeFragment">
 
     <ImageView
@@ -20,19 +20,19 @@
         android:layout_height="300dp"
         android:background="@drawable/gradient_overlay" />
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="260dp"
         android:background="@drawable/top_rounded_card"
+        android:paddingTop="20dp"
         app:cardCornerRadius="0dp"
         app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="20dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,7 +45,7 @@
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sourcesans3_medium"
+                    android:fontFamily="@font/sourcesans3_semibold"
                     android:text="It's Monday, Sept 1, 2025"
                     android:textColor="@color/slate_700"
                     android:textSize="16sp" />
@@ -60,75 +60,94 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cardReportCta"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
+                android:orientation="horizontal"
+                android:paddingHorizontal="16dp"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="@color/indigo_100"
-                android:clickable="true"
-                android:focusable="true"
-                app:strokeColor="#00000000"
-                app:cardCornerRadius="16dp">
+                android:gravity="center"
+                android:baselineAligned="false">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardReportLost"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:padding="20dp">
-
-                    <ImageView
-                        android:id="@+id/iconReportCta"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:contentDescription="Report something"
-                        android:src="@drawable/ic_lost"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/indigo_800" />
+                    android:layout_weight="1"
+                    android:layout_marginEnd="8dp"
+                    android:backgroundTint="@color/red_100"
+                    android:clickable="true"
+                    android:focusable="true"
+                    app:strokeColor="#00000000"
+                    app:cardCornerRadius="16dp">
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
                         android:orientation="vertical"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/chevronReportCta"
-                        app:layout_constraintStart_toEndOf="@id/iconReportCta"
-                        app:layout_constraintTop_toTopOf="parent">
+                        android:padding="20dp"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:layout_width="46dp"
+                            android:layout_height="46dp"
+                            android:contentDescription="Report Lost"
+                            android:src="@drawable/ic_lost"
+                            app:tint="@color/red_800" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Report an Item"
-                            android:textColor="@color/indigo_800"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/sourcesans3_semibold"
-                            android:text="Lost something or found a belonging?"
-                            android:textColor="@color/slate_800"
-                            android:textSize="15sp" />
+                            android:text="Report Lost"
+                            android:textAlignment="center"
+                            android:textColor="@color/red_800"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_marginTop="8dp"/>
                     </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/chevronReportCta"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:contentDescription="@null"
-                        android:src="@drawable/ic_chevron_right"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/slate_800" />
+                </com.google.android.material.card.MaterialCardView>
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardReportFound"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="8dp"
+                    android:backgroundTint="@color/indigo_100"
+                    android:clickable="true"
+                    android:focusable="true"
+                    app:strokeColor="#00000000"
+                    app:cardCornerRadius="16dp">
 
-            </com.google.android.material.card.MaterialCardView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="20dp"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:layout_width="46dp"
+                            android:layout_height="46dp"
+                            android:contentDescription="Report Found"
+                            android:src="@drawable/ic_found"
+                            app:tint="@color/indigo_800" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Report Found"
+                            android:textAlignment="center"
+                            android:textColor="@color/indigo_800"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_marginTop="8dp"/>
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -167,54 +186,58 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvRecentItems"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:paddingHorizontal="8dp"
-                android:layout_weight="1"
-                tools:itemCount="4"
-                android:visibility="gone"
-                tools:listitem="@layout/recent_post" />
-
-            <LinearLayout
-                android:id="@+id/empty_state_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="32dp"
-                android:visibility="visible">
-
-                <ImageView
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
-                    android:contentDescription="No items found"
-                    android:src="@drawable/empty_data"
-                     />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvRecentItems"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Nothing here yet!"
-                    android:textColor="@color/slate_800"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="8dp"
+                    android:paddingHorizontal="8dp"
+                    tools:itemCount="4"
+                    android:visibility="gone"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/recent_post" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/empty_state_view"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="16dp"
                     android:gravity="center"
-                    android:text="Be the first to post a lost or found item."
-                    android:textColor="@color/slate_700"
-                    android:textSize="16sp" />
+                    android:orientation="vertical"
+                    android:padding="32dp"
+                    android:visibility="visible">
 
-            </LinearLayout>
+                    <ImageView
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:contentDescription="No items found"
+                        android:src="@drawable/empty_data"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="-8dp"
+                        android:text="Nothing here yet!"
+                        android:textColor="@color/slate_800"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Be the first to post a lost or found item."
+                        android:textColor="@color/slate_700"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+            </FrameLayout>
         </LinearLayout>
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
